    - reduced idle processing by only updating the active view
  * editor
    - added automatic brace completion
  * language service
    - dparser: semantic analysis no longer times out after 500ms, but cancels previous requests
    - dparser: improved performance by adding name lookup cache
    - Improvements to completion lists:
      - completion box no longer pops up if caret has been moved elsewhere
      - new option to disable exact start match (searches case insensitive sub string)
      - free functions show different icon than member functions
      - aliases show other icon than variables
      - new sorting modes "by type" using classification by the semantic engine,
        "by declaration", effectively using scopes as discovered by the semantic engine
      - without any match, still keep the completion box open with recent items
      - less flashing when updating the results
      - code snippets now added to possible expansions

2017-03-13 Version 0.44.1

  * bugzilla 17252: Fixed bad character inserted into the executable search path default

2017-02-04 Version 0.44.2

  * fixed building private phobos with recent dmd
  * fixed freeze during semantic analysis
  * bugzilla 17254: close and reopen completion box if results added
  * fix link to build log: replace spaces with %20
  * added VC project integration for VS2017

unreleased Version 0.45.0

  * added option to monitor memory usage of the compiler
  * fixed Compile and Run/Debug if building through MS-COFF and not having VS selected in sc.ini
  * mago: fixed memory leaks that could also prohibit compilation due to PDB file still open
  * mago: add debugger options page to allow hiding internal locals
  * DParser: added support for function attributes @nogc and scope, align(expression)
  * added task list support for files loaded into the editor
  * read default DMD installation path from Visual D or DMD registry key, if not available in 
    VS registry hive